# cregex

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml  ubuntu.yml
include/gk/: regex.h
src/: cregex.cpp  demo.c
